deployments/envs/prd/worker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-worker-app
  labels:
    app: voting-system
    component: worker
    environment: production
